--- a/test/test.yaml
+++ b/test/test.yaml
@@ -1,13 +1,16 @@
 seed: 0
 n_genes: 10
 d_fitness: 2
-n_population: [4,4]
+
+population:
+  size: [4,4]
+  locality: 10
+  toroidal: true
+
 n_elite: 3
 n_gen: 10
 log_gen: 0
 save_gen: 0
 m_rate: 0.3
-locality: 10
-toroidal: true
 # TODO: the config should have a nested structure to it.
 #
